--- a/settings.json
+++ b/settings.json
@@ -3,11 +3,11 @@
 "autoplaymusic": true,
 "autocomposing": false,
 "autorecording": true,
-"NamaBot":"S H E R L Y N N", 
-"NomorOwner":"6281220670449", 
-"NamaOwner":"KurrXd", 
-"Dana":"081220670449", 
-"Ovo":"081220670449", 
-"Gopay":"081220670449", 
+"NamaBot":"Harcy Bot", 
+"NomorOwner":"6285607653803", 
+"NamaOwner":"Harcy", 
+"Dana":"085607653803", 
+"Ovo":"*_*", 
+"Gopay":"Scan pp bot", 
 "HunterApi":"Ikyy69"
 }
